package ar.edu.utn.frba.dds.administrador;

public class Administrador {
  private String nombre;

  public Administrador(String nombre) {
    this.nombre = nombre;
  }

  public String getNombre() {
    return nombre;
  }
}
